--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,15 +3,17 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
+@import "compass/css3";
 @import "compass/reset";
 
-$color-base-text: #ff9f46;
+@import "palette";
+
 
 p {
 	margin: 20px 50px;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: .9em;
-	color: $color-base-text;
+	color: $base-text;
 	// font-style: normal;
 }
 
@@ -35,6 +37,29 @@ button {
 	width: 40%;
 }
 
+.new-roast-container {
+	margin-left: 0px;
+	opacity: 100;
+}
+
+.new-roast-container {
+	-webkit-transition:all linear .5s;
+	transition:all linear .5s;
+}
+
+.new-roast-container.ng-hide {
+	margin-left: -200px;
+	opacity: 0;
+}
+
+.new-roast-container.ng-hide-add, .new-roast-container.ng-hide-remove {
+  /* this needs to be here to make it visible during the animation
+     since the .ng-hide class is already on the element rendering
+     it as hidden. */
+  display:block!important;
+}
+
+
 .close_button {
 	background-image: url('data:image/svg+xml;charset=US-ASCII,<%3Fxml%20version%3D"1.0"%20encoding%3D"utf-8"%3F><!DOCTYPE%20svg%20PUBLIC%20"-%2F%2FW3C%2F%2FDTD%20SVG%201.1%20Tiny%2F%2FEN"%20"http%3A%2F%2Fwww.w3.org%2FGraphics%2FSVG%2F1.1%2FDTD%2Fsvg11-tiny.dtd"><svg%20version%3D"1.1"%20baseProfile%3D"tiny"%20id%3D"Layer_1"%20xmlns%3D"http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"%20xmlns%3Axlink%3D"http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink"%20%20x%3D"0px"%20y%3D"0px"%20width%3D"25px"%20height%3D"25px"%20viewBox%3D"0%200%2025%2025"%20xml%3Aspace%3D"preserve"><style%20type%3D"text%2Fcss">circle%2C%20ellipse%2C%20line%2C%20path%2C%20polygon%2C%20polyline%2C%20rect%2C%20text%20%7B%20fill%3A%20%23999999%20!important%3B%20%7D<%2Fstyle><polygon%20fill-rule%3D"evenodd"%20points%3D"16.667%2C12.5%2016.667%2C12.5%2025.001%2C4.167%2020.834%2C0%2012.5%2C8.333%204.167%2C0%200%2C4.167%208.334%2C12.5%20%208.334%2C12.5%208.334%2C12.5%200%2C20.833%204.167%2C25%2012.501%2C16.667%2020.834%2C25%2025.001%2C20.833%2016.667%2C12.5%20"%2F><%2Fsvg>');
 	background-repeat: no-repeat;
@@ -47,7 +72,7 @@ button {
 .roast-list {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: .9em;
-	color: $color-base-text;
+	color: $base-text;
 	float: right;
 	margin-top: 25px;
 	margin-right: 25px;
@@ -76,5 +101,53 @@ button {
 .temp {
 	margin-right: 7px;
 }
+
+.overlay {
+	//display: none;
+	position: fixed;
+	overflow: hidden;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	pointer-events:none;
+}
+
+.test-button-container {
+	display: flex;
+	height: 100%;
+	//position: fixed;
+	z-index: 50;
+	// flex-direction: row;
+	// justify-content: center;
+	// align-items: center;
+
+}
+
+.test-button {
+	width:100px;
+	height:35px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #666;
+	margin: auto;
+	z-index: 50;
+	display:flex;
+	// background-color:red;
+ 	//z-index:500;
+	// position: fixed;
+}
+
+.test-button-text {
+	color:red;
+	margin: auto;
+	//text-align: center;	
+	//@include display-flex(inline-flex);
+	//@include align-items(center);
+}
+
+
+
 
 
