added basic modal. Is this encapsulated/transferrable right now?

--- a/public/views/add_roast.html
+++ b/public/views/add_roast.html
@@ -17,7 +17,7 @@
 			<p>Drop:<input type="text" name="temp_at_drop" placeholder="temp" ng-model="newRoast.temp_at_drop"></p>
 
 			<p>Bottom Out: <input type="text" size="8" name="time_at_drop" ng-model="newRoast.time_at_drop">
-			<input type="text" name="temp_at_drop" placeholder="temp" ng-model="newRoast.temp_at_drop"></p>
+			<input type="text" name="temp_at_bottom_out" placeholder="temp" ng-model="newRoast.temp_at_drop"></p>
 
 			<p>Yellow: <input type="text" size="8" name="time_to_yellow" ng-model="newRoast.time_to_yellow">
 			<input type="text" name="temp_at_yellow" placeholder="temp" ng-model="newRoast.temp_at_yellow"></p>
@@ -37,8 +37,8 @@
 			<p>2nd Crack End: <input type="text" size="8" name="time_to_second_crack_end" ng-model="newRoast.time_to_second_crack_end">
 			<input type="text" name="temp_at_second_crack_end" placeholder="temp" ng-model="newRoast.temp_at_second_crack_end"></p>
 
-			<p>End: <input type="text" size="8" name="time_to_second_crack_end" ng-model="newRoast.time_to_second_crack_end">
-			<input type="text" name="temp_at_second_crack_end" placeholder="temp" ng-model="newRoast.temp_at_second_crack_end"></p>
+			<p>End: <input type="text" size="8" name="time_to_end" ng-model="newRoast.time_to_second_crack_end">
+			<input type="text" name="temp_at_end" placeholder="temp" ng-model="newRoast.temp_at_end"></p>
 
 			
 
