it's been so long save. Before I get back to messing with file upload

--- a/public/views/single_roast.html
+++ b/public/views/single_roast.html
@@ -3,5 +3,6 @@
 <!-- hello single roast -->
 	<p class="roast-date">{{singleRoast.roast_date}}</p>
     <p class="roast-title">{{singleRoast.bean}}</p>
-    <img src="{{singleRoast.image_url}}" class="roast-image"/>
+    <img rst-image-zoom src="{{singleRoast.image_url}}" class="roast-image"/>
+    <!-- <div rst-image-zoom>hello</div>  -->
 </div>
