--- a/public/views/show_roasts.html
+++ b/public/views/show_roasts.html
@@ -1,14 +1,13 @@
 <!-- SHOW ROASTS -->
-<div class="roast-list" ng-repeat="roast in roasts">
-	<div class="single-roast-card" ng-click="fetchOneRoast(roast._id)">
-		<div class="roast-info-container">
-			<a class='close_button' ng-click="deleteRoast(roast._id)" stop-event='click'>&nbsp;</a>
-			<p class="roast-date">{{roast.roast_date}}</p>
-		    <p class="roast-title">{{roast.bean}}</p>
-		    <img src="{{roast.image_url}}" class="roast-image"/>
-			<!-- <li>
-		    	<span class="temp" ng-repeat="temp in roast.temp_curve">{{temp}}</span>
-		    </li> -->
-		</div>
-	</div>
-</div>	
+<div ng-repeat="roast in roasts" class="roast-list">
+  <div ng-click="fetchOneRoast(roast._id)" class="single-roast-card">
+    <div class="roast-info-container"><a ng-click="deleteRoast(roast._id)" stop-event="click" class="close_button">&nbsp;</a>
+      <p class="roast-date">{{roast.roast_date}}</p>
+      <p class="roast-title">{{roast.bean}}</p><img src="{{roast.image_url}}" class="roast-image"/>
+      <!--
+      li
+      	span(class="temp" ng-repeat="temp in roast.temp_curve") {{temp}}
+      -->
+    </div>
+  </div>
+</div>
