--- a/public/views/single_roast.html
+++ b/public/views/single_roast.html
@@ -1,8 +1,5 @@
 <!-- single roast detail -->
 <div class="single-roast-detail">
-<!-- hello single roast -->
-	<p class="roast-date">{{singleRoast.roast_date}}</p>
-    <p class="roast-title">{{singleRoast.bean}}</p>
-    <img rst-image-zoom src="{{singleRoast.image_url}}" class="roast-image"/>
-    <!-- <div rst-image-zoom>hello</div>  -->
+  <p class="roast-date">{{singleRoast.roast_date}}</p>
+  <p class="roast-title">{{singleRoast.bean}}</p><img rst-image-zoom="rst-image-zoom" src="{{singleRoast.image_url}}" class="roast-image"/>
 </div>
