--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,40 +2,40 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import "compass/reset";
-@import "compass/css3";
-@import "compass/utilities/general/clearfix";
+// @import "compass/reset";
+// @import "compass/css3";
+// @import "compass/utilities/general/clearfix";
+
+// @import "../public/vendor/sanitize-css/sanitize";
+
+// @import "../public/vendor/susy/sass/susy";
+// @import "../public/vendor/breakpoint-sass/stylesheets/breakpoint";
+// @import "grid";
 
 @import "palette";
-@import "susy";
-@import "breakpoint";
-@import "grid";
 @import "typography";
 
 
 
-.outer-container {
-	@include container(1000px);
-	// @include layout($main-container-large);
-}
+// .outer-container {
+// 	@include container(1000px);
+// 	// @include layout($main-container-large);
+// }
 
 
 .header {
 	@include proxima-sans-nova-bold;
 	// @include bouffant;
 	font-size: 1.3em;
-	@include span(4 narrow);
-	margin-left: gutter();
 	margin-bottom:15px;
+	width: 100%;
 	height: 50px;
 	background-color: $headerBg;
-	line-height:50px;
 	letter-spacing: .05em;
 	
 	li {
-		//@include span(1);
 		display: inline;
-		margin-left: gutter(2);
+		margin-left: 20px;
 	}
 
 	a {
@@ -65,43 +65,43 @@ button {
 	cursor:pointer;
 }
 
-.new-roast {
-	float: left;
-	margin-top: 25px;
-	margin-left: 25px;
-	// width: 40%;
-	p {
-		margin-bottom:5px;
-		@include proxima-sans-nova-light;
-		font-size: 1.2em;
-		color: $midGrey;
-	}
-}
+// .new-roast {
+// 	float: left;
+// 	margin-top: 25px;
+// 	margin-left: 25px;
+// 	// width: 40%;
+// 	p {
+// 		margin-bottom:5px;
+// 		@include proxima-sans-nova-light;
+// 		font-size: 1.2em;
+// 		color: $midGrey;
+// 	}
+// }
 
-.new-roast-container {
-	margin-left: 0px;
-	opacity: 100;
-	position: absolute;
-	z-index: 5;
-	width: 500px;
-}
+// .new-roast-container {
+// 	margin-left: 0px;
+// 	opacity: 100;
+// 	position: absolute;
+// 	z-index: 5;
+// 	width: 500px;
+// }
 
-.new-roast-container {
-	-webkit-transition:all linear .5s;
-	transition:all linear .5s;
-}
+// .new-roast-container {
+// 	-webkit-transition:all linear .5s;
+// 	transition:all linear .5s;
+// }
 
-.new-roast-container.ng-hide {
-	margin-left: -200px;
-	opacity: 0;
-}
+// .new-roast-container.ng-hide {
+// 	margin-left: -200px;
+// 	opacity: 0;
+// }
 
-.new-roast-container.ng-hide-add, .new-roast-container.ng-hide-remove {
-  /* this needs to be here to make it visible during the animation
-     since the .ng-hide class is already on the element rendering
-     it as hidden. */
-  display:block!important;
-}
+// .new-roast-container.ng-hide-add, .new-roast-container.ng-hide-remove {
+//   /* this needs to be here to make it visible during the animation
+//      since the .ng-hide class is already on the element rendering
+//      it as hidden. */
+//   display:block!important;
+// }
 
 
 .close_button {
@@ -125,20 +125,20 @@ button {
 
 .single-roast-detail {
 	@include proxima-sans-nova-light;
-	@include span(2);
+	// @include span(2);
 	margin-left: gutter();
 	margin-right: gutter();
 }
 
 .single-roast-card {
-	@include span(2);
+	// @include span(2);
 	margin-left: gutter();
 	margin-right: gutter();
-	@include breakpoint($main-breakpoint) {
-		margin-left: gutter();
-		margin-right: gutter();
-		@include span(1 narrow);
-	}
+		// @include breakpoint($main-breakpoint) {
+			// margin-left: gutter();
+			// margin-right: gutter();
+			// @include span(1 narrow);
+		// }
 	// @include container;
 	background-color: $single-roast-bg;
 	border-style: solid;
