--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -52,6 +52,11 @@
 // 	// font-style: normal;
 // }
 
+
+#imgPreview {
+	width:70%
+}
+
 button {
 	width: 200px;
 	height: 50px;
@@ -331,4 +336,5 @@ button {
   font-weight: bold;
   font-family: 'arial', 'sans-serif';
 }
+
 
