--- a/public/jade/views/show_roasts.jade
+++ b/public/jade/views/show_roasts.jade
@@ -1,12 +1,12 @@
 <!-- SHOW ROASTS -->
-div(class="roast-list" ng-repeat="roast in roasts")
-	div(class="single-roast-card" ng-click="fetchOneRoast(roast._id)")
-		.roast-info-container
-			a(class='close_button' ng-click="deleteRoast(roast._id)" stop-event='click') &nbsp;
-			p(class="roast-date") {{roast.roast_date}}
-			p(class="roast-title") {{roast.bean}}
-			img(ng-src="{{roast.image_url}}" class="roast-image")
-
-			//
-				li
-					span(class="temp" ng-repeat="temp in roast.temp_curve") {{temp}}
+div(layout layout-sm="column")
+	div(ng-repeat="roast in roasts" flex="25")
+		md-content(class="md-padding")
+					md-card
+						img(ng-src="img/placeholder_roast_img.jpg" class="md-card-image" alt="Washed Out")
+						md-card-content
+							h2(class="md-title") {{roast.title}}
+							p {{roast.roast_notes}}
+						md-card-actions(layout="row" layout-align="end center")
+							md-button Action 1
+							md-button Action 2
