--- a/public/jade/views/show_roasts.jade
+++ b/public/jade/views/show_roasts.jade
@@ -1,12 +1,12 @@
 <!-- SHOW ROASTS -->
-div(layout layout-sm="column")
+div(layout layout-wrap layout-sm="column")
 	div(ng-repeat="roast in roasts" flex="25")
 		md-content(class="md-padding")
-					md-card
-						img(ng-src="img/placeholder_roast_img.jpg" class="md-card-image" alt="Washed Out")
-						md-card-content
-							h2(class="md-title") {{roast.title}}
-							p {{roast.roast_notes}}
-						md-card-actions(layout="row" layout-align="end center")
-							md-button Action 1
-							md-button Action 2
+			md-card
+				img(ng-src="img/placeholder_roast_img.jpg" class="md-card-image" alt="Washed Out")
+				md-card-content
+					h2(class="md-title") {{roast.title}}
+					p {{roast.roast_notes}}
+				md-card-actions(layout="row" layout-align="end center")
+					md-button Action 1
+					md-button Action 2
